fixed so basic use on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ body{
     border-radius: 11px;
     font-size: 35px;
     color: #004b64;
-    margin: 40px 35vw 0px 35vw;
+    margin: 40px 20vw 0px 20vw;
 }
 
 .topPlayer{
